--- a/views/pickup.ejs
+++ b/views/pickup.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/pickup.css" />
+  <link rel="stylesheet" href="/css/pickup.css" />
 
   <title>Schedule A Pickup, NOW!</title>
 </head>
