--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/userhome.css" />
   <link rel="stylesheet" href="/css/ourservices.css" />
   <link rel="stylesheet" href="/css/about-us.css" />
-  <link rel="stylesheet" href="/css/contact.css" />
+  <link rel="stylesheet" href="/css/contacts.css" />
   <!-- Include Anime.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
